# cin_rl

./: .gitignore  pyproject.toml
cin_rl/: runners.py
cin_rl/agents/: a2c.py  a2c_test.py  base.py  ppo.py  reinforce.py  reinforce_test.py
cin_rl/nn/: common.py  vision.py
tests/: ppo_test.py
