[tool.poetry]
name = "cin_rl"
version = "0.0.1"
description = "UCY's Computational Intelligence and Neuroscience Research Group's Reinforcement Learning Library"
authors = ["Stelios Tymvios <solliet@protonmail.com>"]
license = "BSD-3-CLAUSE"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
